# Northwind

./: .gitignore  MCP_Server_Technical_Documentation.docx  README.md  server.py
Employee/: pom.xml  requests.http
Employee/data/: employeedb.lock.db  employeedb.mv.db  employeedb.trace.db
Employee/src/main/java/com/details/employee/: Employee.java  EmployeeApplication.java  EmployeeController.java  EmployeeNotFoundException.java  EmployeeRepository.java  EmployeeService.java  GlobalExceptionHandler.java  OpenApiConfig.java
Employee/src/main/resources/: application.properties
Employee/src/test/java/com/details/employee/: EmployeeApplicationTests.java
employee-frontend/: design.html  index.html  package-lock.json  package.json
employee-frontend/src/: App.css  App.jsx  index.css
employee-frontend/src/api/: employeeApi.js
employee-frontend/src/auth/: session.js
employee-frontend/src/components/: ConfirmDialog.jsx  EmployeeForm.jsx  EmployeeTable.jsx  FilterSelect.jsx  Icon.jsx  Pagination.jsx  SearchBar.jsx  StatCards.jsx  Toast.jsx
employee-frontend/src/data/: employees.js
employee-frontend/src/pages/: DirectoryPage.jsx  HomePage.css  HomePage.jsx  SignInPage.jsx
northwind-mcp/: .gitignore  pyproject.toml
northwind-mcp/examples/: qwen_ollama_mcp_test.py
northwind-mcp/src/northwind_mcp/: __init__.py  employee_client.py  employee_response.py  intent_extractor.py  schemas.py  server.py  tools.py
