[project]
name = "northwind-mcp"
version = "0.1.0"
description = "Proof-of-concept MCP server for the Northwind employee backend."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp[cli]>=1.27,<2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.scripts]
northwind-mcp = "northwind_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/northwind_mcp"]
